K1J-2113: Use structured address (#502)